--- a/absoleto.html
+++ b/absoleto.html
@@ -54,7 +54,8 @@
           "o primeiro corpo era cru da angústia, da angústia mais pura, que se bebe em leite de mãe".
           Num deslize quase metonímico entre o amor e o desejo, o autor parece homenagear grandes poetas em seus estilos.</p>
         <div class="emphasis">Iluminado pela letra,</div>
-        <div class="emphasis">escreve e faz a letra num deslize metonímico</div>
+        <div class="emphasis">escreve e faz a letra</div>
+        <div class="emphasis">num deslize metonímico</div>
         <div class="emphasis">para dizer do seu invisível.</div>
         <p>Assim, serve a palavra para que ela diga do seu impossível do dizer.</p>
         <br>
