--- a/pavao de seis cores.html
+++ b/pavao de seis cores.html
@@ -49,7 +49,8 @@
           acho é que lucas haas cordeiro matizou, neste seu pavão, 
           uma trama furta-cor, atravessada por diversas personagens alucinadas (de luz e de loucura), 
           numa linguagem também furta-cor,</p> 
-          <div class="emphasis">uma espécie de cromatismo psicodélico do frio,</div>
+          <div class="emphasis">uma espécie de cromatismo</div>
+          <div class="emphasis">psicodélico do frio,</div>
           <p></p>uma arquitetura em que o nosso horror de cada dia nos dá bom dia e boa tarde e boa noite, 
           revela-se-nos humano, e pra isso ele partiu de uma tradição nossa que passa por dalton trevisan, 
           rubem fonseca, mas também por romancistas como thomas pynchon e david foster wallace, para travar um diálogo sério. 
