--- a/seis vozes para a fuga.html
+++ b/seis vozes para a fuga.html
@@ -50,8 +50,10 @@
           assim como os performers que a cada sexto de um sexto assumem e avivam com sua morte ou
           imortalizam com sua vida uma das vozes que se alternam nos 36 fragmentos desse romance cuja
           estrutura complexa, simétrica e entrelaçada, imita a de uma fuga bachiana.</p>
-        <div class="emphasis">Exemplo acabado de literatura combinatória,</div> 
-        <div class="emphasis">Seis vozes para a fuga é um romance múltiplo.</div>
+        <div class="emphasis">Exemplo acabado</div>
+        <div class="emphasis">de literatura combinatória,</div> 
+        <div class="emphasis">Seis vozes para a fuga</div>
+        <div class="emphasis">é um romance múltiplo.</div>
           <p>Cada breve narrativa pode ser lida per se, com uma semi-autonomia de conto. Seis vezes seis vozes se
           revezam variando estilos que mantêm sempre a tensão de uma prosa ora filosófica ora
           psicanalítica, técnica ou lírico-poética, sem jamais perder a harmonia, cada vez colorindo uma
@@ -77,7 +79,8 @@
           citado, tecendo considerações metalinguísticas acerca do próprio fazer literário, atestam
           claramente sua verve barroquista – o barroco, pérola irregular, no dizer de Severo
           Sarduy, que caracteriza-se precisamente pela</p>
-        <div class="emphasis">profusão sígnica, sempre mais afeita à entrega</div>
+        <div class="emphasis">profusão sígnica,</div>
+        <div class="emphasis">sempre mais afeita à entrega</div>
         <div class="emphasis">do que à clareza de seus enunciados.</div>
         <p>E o narrar barroquista de Lucas acha-se pautado pela forma musical da fuga, já
           explicitada em seu título. Tal processo composicional, que tem na obra de Johan
@@ -119,7 +122,8 @@
           sempre estranhos e incomuns, sobre os quais Lucas Haas escolhe 'poetar', e que nos põem</p> 
           <div class="emphasis">em sintonia com aquele mavioso Cielo,</div>
           <div class="emphasis">vibrante e forte,</div>
-          <div class="emphasis">cuja melodia nos convida a deixar a prosaica Terra</div>
+          <div class="emphasis">cuja melodia nos convida</div>
+          <div class="emphasis">a deixar a prosaica Terra</div>
           <p>onde vivemos para adentrar no sinistro Hades que nos espera, 
           a partir do que, viajando por áreas míticas interditas, quem sabe um dia, ascendidos deste abismo de nós mesmos, 
           possamos migrar redimidos ao centro mandálico do Idílico Conclave dos anjos e arcanjos que nos assistem 
