--- a/sussurro.html
+++ b/sussurro.html
@@ -30,7 +30,8 @@
         <p>Com esse trabalho, Cordeiro vai ao encontro do que há de melhor na poesia contemporânea brasileira.
           Apóia-se na marginalidade das palavras, na moderna ênfase visual, no tumulto contemporâneo, nas múltiplas vozes, na metapoesia,
           no lirismo satírico, ou melhor, <em>salírico</em>, e atinge um soco no âmago do leitor. Um texto habilmente em movimento:</p>
-        <div class="emphasis">"Olhos que se fecham, só para bocas que se abrem",</div>
+        <div class="emphasis">"Olhos que se fecham,</div>
+        <div class="emphasis"> só para bocas que se abrem",</div>
         <p>insigante: <em>"Termino o dia com uma dúvida e uma certeza: estou apaixonado"</em>,
           crítico: <em>"Associaçõe$ Financeira$ de Ensino Terceirizado Senhor Dábouiú-buchi: é o saber dos novos tempos"</em>,
           irônico: <em>"cabo de vassoura que na noite é bendita companhia"</em> e que transpira espontaneidade:
