--- a/absoleto.html
+++ b/absoleto.html
@@ -18,16 +18,17 @@
     <div class="container">
       <div class="content">
         <h3><em>Mídias</em></h3>
-        <p>Acesse o audiobook da obra: <a href="https://soundcloud.com/user-628016153-328800658/sets/absoleto" target="_blank"><em>Absoleto_soundcloud</em></a>.</p>
+        <p>Acesse o audiobook da obra: <a href="https://soundcloud.com/user-628016153-328800658/sets/absoleto" 
+          target="_blank"><em>Absoleto_soundcloud</em></a>.</p>
         <p>Amostra do poema <em>Ser-Hóstia da Palavra:</em></p>
-        <audio controls loop>
+        <audio controls>
           <source src="images/05.-Ser-hóstia-Da-Palavra.mp3"> 
         </audio>
         <p>Interaja com as ilustrações digitais da obra: <a href="https://openprocessing.org/user/95506/?view=sketches&o=3#sketches" target="_blank"><em>Ilustrações</em></a>.</p>
         <p>Amostra do poema <em>Sintoma n. 1:</em></p>
         <video src="images/sintoma n1.mp4"
         title ="topologia controlada por parâmetros"
-        height="300px" controls autoplay muted>
+        height="300px" controls autoplay muted loop>
         </video>
         <br>
         <br>
