--- a/absoleto.html
+++ b/absoleto.html
@@ -81,9 +81,9 @@
           <div class="submenu" id="literatura">
             <a href="sussurro.html"><em>Sussuro&Codeína</em></a>
             <p>|</p>
-            <a href="seis vozes para a fuga.html"><em>Seis Vozes para a Fuga</em></a>
+            <a href="seis vozes para a fuga.html"><em>Seis Vozes</em></a>
             <p>|</p>
-            <a href="pavao de seis cores.html"><em>Pavão de Seis Cores</em></a>
+            <a href="pavao de seis cores.html"><em>Pavão</em></a>
             <p>|</p>
             <a href="absoleto.html"><em>Absoleto</em></a>
             <p>|</p>
