--- a/galeria.html
+++ b/galeria.html
@@ -48,9 +48,9 @@
         <div class="submenu" id="literatura">
           <a href="sussurro.html"><em>Sussuro&Codeína</em></a>
           <p>|</p>
-          <a href="seis vozes para a fuga.html"><em>Seis Vozes para a Fuga</em></a>
+          <a href="seis vozes para a fuga.html"><em>Seis Vozes</em></a>
           <p>|</p>
-          <a href="pavao de seis cores.html"><em>Pavão de Seis Cores</em></a>
+          <a href="pavao de seis cores.html"><em>Pavão</em></a>
           <p>|</p>
           <a href="absoleto.html"><em>Absoleto</em></a>
           <p>|</p>
@@ -60,9 +60,9 @@
         </div>
         <a href="galeria.html">Galeria</a>
         <a href="contato.html">Contato</a>
-        </div>
       </div>
     </div>
+  </div>
 
     <script src="script.js"></script>
     
