--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="content">
       <h3><em>Sobre</em></h3>
-      <p>Lucas Haas Cordeiro nasceu em Curitiba, em 1989. Desde pequeno se envolveu com escrita e literatura.</p>
+      <p>Lucas Haas Cordeiro nasceu em Curitiba, em 1989. Desde pequeno se envolve com escrita e literatura.</p>
       <ul>
         <li>Em 2006, lançou seu primeiro livro de poesia, <em>Sussuro&Codeína</em>.</li>
         <li>Em 2015, lançou seu primeiro romance, <em>Seis Vozes para a Fuga</em>.</li>
