--- a/seis vozes para a fuga.html
+++ b/seis vozes para a fuga.html
@@ -18,7 +18,7 @@
       <div class="content">
         <h3><em>Sobre</em></h3>
         <p>A evidente monocronia do cenário já não esconde as diferentes nuances dos personagens. 36 vozes se entrechocam em Curitiba.
-          Psicanalistas, prostitutas, estudantes, professores, políticos, padras e alquimistas dividem as ruas de uma cidade que camufla toda violência,
+          Psicanalistas, prostitutas, estudantes, professores, políticos, padres e alquimistas dividem as ruas de uma cidade que camufla toda violência,
           onde a religião transborda como redenção impossível. Durante 21 dias, irrompem histórias de amor, reencontros e desespero. 
           Os personagens se defrontam com a mística dos sonhos, enlouquecem, mergulham na religiosidade da experiência enteógena, dialogam
           com o leitor sobre os caminhos da arte e debatem a diversidade sexual como expressão identitária. A simetria dos textos orquestra as notas
