--- a/galeria.html
+++ b/galeria.html
@@ -56,6 +56,8 @@
           <p>|</p>
           <a href="nouvelle world.html"><em>Nouvelle World</em></a>
           <p>|</p>
+          <a href="lamentacoes.html"><em>Lamentações</em></a>
+          <p>|</p>
           <a href="outros textos.html"><em>Outros textos</em></a>
         </div>
         <a href="galeria.html">Galeria</a>
