--- a/lamentacoes.html
+++ b/lamentacoes.html
@@ -18,11 +18,11 @@
       <div class="content">
         
         <h3><em>Sobre</em></h3>
-        <p>" “Lamentações” é um relato que proporciona uma viagem em etapas. 
+        <p>“Lamentações” é um relato que proporciona uma viagem em etapas. 
           Passa pelo império persa reconfigurado, construído de forma gloriosa um milênio depois de Maomé. 
           Temos Lisboa como transição entre o primeiro e o segundo texto, passagem para uma imersão histórica – e linguística – 
           pelas missões exploradoras da terra brasilis do século 17. Salta, por fim, para a Buenos Aires de 2016, 
-          aqui encenada como o futuro distópico de um país que se fecha a toda influência estrangeira."</p>
+          aqui encenada como o futuro distópico de um país que se fecha a toda influência estrangeira.</p>
           <br>
           <a href="https://kafkaedicoes.com.br/produto/lamentacoes-historiografia-em-terras-estrangeiras/?__cf_chl_tk=F1MKFUF0yC0T1gXf1gNdnRflJ1dNQ.wAteeCwXa1r30-1734538125-1.0.1.1-3yFb9CTB6XNFjaxx3kbOEjTY7kyIxQGQUAkQAYUCsss"
           target="_blank"
