--- a/lamentacoes.html
+++ b/lamentacoes.html
@@ -21,7 +21,7 @@
         <p>“Lamentações” é um relato que proporciona uma viagem em etapas. 
           Passa pelo império persa reconfigurado, construído de forma gloriosa um milênio depois de Maomé. 
           Temos Lisboa como transição entre o primeiro e o segundo texto, passagem para uma imersão histórica – e linguística – 
-          pelas missões exploradoras da terra brasilis do século 17. Salta, por fim, para a Buenos Aires de 2016, 
+          pelas missões exploradoras da <em>terra brasilis</em> do século 17. Salta, por fim, para a Buenos Aires de 2016, 
           aqui encenada como o futuro distópico de um país que se fecha a toda influência estrangeira.</p>
           <br>
           <a href="https://kafkaedicoes.com.br/produto/lamentacoes-historiografia-em-terras-estrangeiras/?__cf_chl_tk=F1MKFUF0yC0T1gXf1gNdnRflJ1dNQ.wAteeCwXa1r30-1734538125-1.0.1.1-3yFb9CTB6XNFjaxx3kbOEjTY7kyIxQGQUAkQAYUCsss"
@@ -69,7 +69,6 @@
         <p><img class="img_centered" src="images/lamentacoes_div2.jpg" title="a mágica do texto e honra da cabeça"></p>
         <br>
         <h3><u>Trecho selecionado</u></h3>
-        <br>
         <p>No horizonte, como um reflexo caminhante das águas do rio, saída das profundezas, 
           onde resgatara sua identidade própria como um ser-das-águas, a imagem de Enã, o deus das águas, se aproxima. 
           <em>“Arerererere!”</em>. Entre as árvores, o silvo de um pássaro, homenagem pela fortuna de um novo dia. 
