--- a/pavao de seis cores.html
+++ b/pavao de seis cores.html
@@ -94,7 +94,7 @@
         <div class="legenda">your theme as I saw it is this:</div>
         <div class="legenda">that for one's art for one's dreams</div>
         <div class="legenda">one may consort and bargain</div>
-        <div class="legenda">with the darkerst powr's</div>
+        <div class="legenda">with the darkerst powers</div>
         <br>
         <div class="legenda">Neil Gaiman</div>
         <br>
