--- a/outros textos.html
+++ b/outros textos.html
@@ -28,6 +28,7 @@
         <p>& <em>pavão de seis cores</em></p>
         <p>& <em>absoleto</em></p>
         <p>& <em>nouvelle world: nas sendas do abismo</em></p>
+        <p>& <em>lamentações: historiografia em terras estrangeiras</em></p>
         <p>& tantos livros que jamais serão lançados</p>
         <p>& tantos livros que jamais serão escritos</p>
         <p>& tudo desagrega. uma confiança energiza o corpo de uma pulsão sem igual. quem és tu, ó sombra que range na calada da noite?
