game.dev description

--- a/contato.html
+++ b/contato.html
@@ -54,6 +54,11 @@
         <li>literatura</li>
         <li>+10 anos de experiência</li>
       </ul>
+      <p>► Game dev nas horas vagas:</p>
+      <ul>
+        <li>acesse a minha página do <a href="https://haascordeiro.itch.io" 
+          target="_blank"><em>itch.io</em></a> para conferir os jogos</li>
+      </ul>
         <br>
         <br>
         <br>
