--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li>Em 2015, lançou seu primeiro romance, <em>Seis Vozes para a Fuga</em>.</li>
         <li>Sua principal obra até aqui é <em>Pavão de Seis Cores</em>, romance lançado em 2017.</li>
         <li>Lançou ainda <em>Absoleto</em> (poesia) e <em>Nouvelle World: nas Sendas do Abismo</em> (novela).</li>
-        <li>Sua obra até aqui termina com <em>Lamentações: historiografia em terras estrangeiras</em> (romance).</li>
+        <li>Sua produção até aqui termina em 2024 com <em>Lamentações: historiografia em terras estrangeiras</em> (romance).</li>
       </ul>
       <p>Entende que a literatura é um diálogo com os mortos, por meio da qual reformulamos o passado e construímos realidades.</p>
       <br>
